--- a/Viewer/content/changelog.txt
+++ b/Viewer/content/changelog.txt
@@ -1,4 +1,8 @@
 ﻿[0.5]
+	Major: Figure's eyes follow player
+		Known Bug: When not looking straight forward, the exposed edges of the eyes aren't lit correctly (too dark) (to be fixed before final release)
+	Major: Add Save/Load Scene menu items
+	Minor: Breast shape is now affected by gravity
 
 [0.4]
 	Major: Added hair
