--- a/Viewer/content/changelog.txt
+++ b/Viewer/content/changelog.txt
@@ -3,6 +3,7 @@
 		Known Bug: When not looking straight forward, the exposed edges of the eyes aren't lit correctly (too dark) (to be fixed before final release)
 	Major: Add Save/Load Scene menu items
 	Minor: Breast shape is now affected by gravity
+	Fixed: Changing character causes hair to stop casting shadows on body
 
 [0.4]
 	Major: Added hair
