--- a/Viewer/content/changelog.txt
+++ b/Viewer/content/changelog.txt
@@ -1,6 +1,6 @@
 [0.7]
 	Major: Added clothing
-		Still a work in progress with known bugs, rendering problems.
+	Minor: Changed the default lighting environment and tone mapping settings
 
 [0.6]
 	Major: Improved responsiveness and naturalness of posing
