Fix blank screenshots
Screenshots taken through SteamVR were coming back completely black. To
problem turns out to be that the SteamVR screenshot facility takes into
account the alpha channel of the submitted texture. I had been leaving
the alpha channel at 0.

--- a/Viewer/content/changelog.txt
+++ b/Viewer/content/changelog.txt
@@ -1,4 +1,5 @@
 [0.9]
+	Fixed: Screenshots taken through SteamVR were blank in one or both eyes.
 
 [0.8]
 	Major: Added eye color and makeup options to menu under "Characters/Character Details"
