--- a/Viewer/content/changelog.txt
+++ b/Viewer/content/changelog.txt
@@ -1,4 +1,5 @@
 [0.9]
+	Minor: Added option to show/hide floor under "Render Settings"
 	Fixed: Screenshots taken through SteamVR were blank in one or both eyes.
 
 [0.8]
