--- a/Viewer/content/changelog.txt
+++ b/Viewer/content/changelog.txt
@@ -1,4 +1,7 @@
 [0.9]
+	Major: Enhanced character "Mix & Match": Skin details (like freckles) and shape details (like muscles) are kept
+	       separate so mixing the skin of a muscular character (like "Rune") with the shape of a another character now gives
+	       better results.
 	Minor: Added option to show/hide floor under "Render Settings"
 	Fixed: Screenshots taken through SteamVR were blank in one or both eyes.
 
